--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,59 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    box-sizing:border-box;
+    padding: auto;
+    margin: auto;   
 }
 header {
     background-color:darkslategray;
-    justify-content:space-between;
-    align-items: center;
-    padding: 20px 35px 20px 0;
+    justify-content:flex-start;
+    align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
+    height: 100px;
 }
-h1 {
-   background-color:rgb(188, 242, 243);
+header h1 {
+   background-color:#BCF2F3;
+   margin-left: 0px;
 }
+
 
 header h1 a {
     color:darkslategray;
     text-decoration: none; 
-    margin: 20px 5px 20px 35px;
+    padding: 20px 35px 20px 0;
 }
 header nav ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:right;
+    align-items:flex-end;
     list-style: none;
+    padding-right: 30px;
+    margin-left: 50px;
 }
 header nav ul li a {
     text-decoration: none;
     font-size: 24px;
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
-    color: rgb(188, 242, 243);
-    padding: 10px 15px;
-    margin: 10px;
-    border-bottom: 5px solid rgb(188, 242, 243);
+    color: #BCF2F3;
+    padding: 10px 30px;
+    margin-right: 10px;
+    border-bottom: 3px solid #BCF2F3;
 }
+.hero {
+    height: 200px;
+    background-image:url(../images/blue.jpg);
+    background-size:cover;
+}
+  .hero p {
+      color:darkslategray;
+      background-color: #BCF2F3;
+      font-size: 45px;
+      padding: 10px;
+      float:right;
+      margin-top: 100px;
+      margin-right: 80px;
+      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      
+  }  
