--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,13 +126,19 @@ footer {
     align-content: space-around;
     justify-content: space-evenly;
     align-items: stretch;
-}
+    }
+    .Primary-section-item:hover {
+        opacity: 0.33;
+    }
 .surf-report {
     width: 100%; 
     height: 400px;
     margin: 10px;
     background-image: url(../images/350x150.png);
     border: 5px solid #BCF2F3
+}
+.surf-report:hover {
+    opacity: 0.33;
 }
 
 .surf-report-content {
